@@ -1,20 +1,17 @@
 package me.learning.microservices.photoapp.api.albums.security.authorization;
 
+import io.jsonwebtoken.ExpiredJwtException;
 import java.io.IOException;
-import java.util.Collections;
-
+import java.util.List;
 import javax.servlet.FilterChain;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-
+import me.learning.microservices.photoapp.api.albums.security.exception.AuthorizationHeaderException;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
 import org.springframework.security.core.context.SecurityContextHolder;
 import org.springframework.security.web.authentication.www.BasicAuthenticationFilter;
-
-import me.learning.microservices.photoapp.api.albums.security.exception.AuthorizationHeaderException;
-import io.jsonwebtoken.ExpiredJwtException;
 
 public class AuthorizationFilter extends BasicAuthenticationFilter {
 
@@ -46,6 +43,6 @@ public class AuthorizationFilter extends BasicAuthenticationFilter {
         String userId = authorizationHeaderParser.parseUserIdFromToken(token);
         return userId == null
             ? null
-            : new UsernamePasswordAuthenticationToken(userId, null, Collections.emptyList());
+            : new UsernamePasswordAuthenticationToken(userId, null, List.of());
     }
 }
