@@ -1,15 +1,19 @@
 package me.learning.microservices.photoapp.api.users.security;
 
+import com.fasterxml.jackson.databind.ObjectMapper;
+import io.jsonwebtoken.Jwts;
+import io.jsonwebtoken.SignatureAlgorithm;
 import java.io.IOException;
-import java.util.Collections;
 import java.util.Date;
-
+import java.util.List;
 import javax.servlet.FilterChain;
 import javax.servlet.ServletException;
 import javax.servlet.http.HttpServletRequest;
 import javax.servlet.http.HttpServletResponse;
-
+import me.learning.microservices.photoapp.api.users.service.UsersService;
 import me.learning.microservices.photoapp.api.users.service.exception.UserNotFoundException;
+import me.learning.microservices.photoapp.api.users.shared.UserDto;
+import me.learning.microservices.photoapp.api.users.ui.model.LoginRequest;
 import org.springframework.core.env.Environment;
 import org.springframework.security.authentication.AuthenticationManager;
 import org.springframework.security.authentication.UsernamePasswordAuthenticationToken;
@@ -17,13 +21,6 @@ import org.springframework.security.core.Authentication;
 import org.springframework.security.core.AuthenticationException;
 import org.springframework.security.core.userdetails.User;
 import org.springframework.security.web.authentication.UsernamePasswordAuthenticationFilter;
-
-import com.fasterxml.jackson.databind.ObjectMapper;
-import io.jsonwebtoken.Jwts;
-import io.jsonwebtoken.SignatureAlgorithm;
-import me.learning.microservices.photoapp.api.users.service.UsersService;
-import me.learning.microservices.photoapp.api.users.shared.UserDto;
-import me.learning.microservices.photoapp.api.users.ui.model.LoginRequest;
 
 public class AuthenticationFilter extends UsernamePasswordAuthenticationFilter {
 
@@ -46,7 +43,7 @@ public class AuthenticationFilter extends UsernamePasswordAuthenticationFilter {
                 new UsernamePasswordAuthenticationToken(
                     credentials.getEmail(),
                     credentials.getPassword(),
-                    Collections.emptyList()
+                    List.of()
                 )
             );
         } catch (IOException e) {
